<resources>
    <string name="app_name">Prova1</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="dont_have_an_account_create_one">Dont have an account? Create One</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="todo">TODO</string>
</resources>